--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,8 @@ ext {
   junitVersion = '5.8.2'
 }
 
-sourceCompatibility = '1.8'
-targetCompatibility = '1.8'
+sourceCompatibility = '17'
+targetCompatibility = '17'
 
 tasks.withType(JavaCompile) {
   options.encoding = 'UTF-8'
@@ -25,6 +25,8 @@ dependencies {
   compileOnly('jakarta.enterprise:jakarta.enterprise.cdi-api:3.0.0')
   compileOnly('jakarta.ws.rs:jakarta.ws.rs-api:3.0.0')
   compileOnly('jakarta.servlet:jakarta.servlet-api:5.0.0')
+
+  implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2'
 
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
